[package]
name = "rust_web_framework"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_web_framework"


[dependencies]
either = "1.8.0"
non-empty-vec = "0.2.3"
these = "2.0.0"
web-sys = { version = "0.3.60", features = [
    "Document",
    "Window",
    "Element",
    "HtmlElement",
    "Node",
] }
