[package]
name = "example-hello-world"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.83"
web-sys = { version = "0.3.60", features = ["console"] }

[dependencies.rust_web_framework]
version = "*"
path = "../../framework"
